<resources>
    <string name="app_name">MemoryPract</string>
    <string name="category_animales">ANIMALES</string>
    <string name="category_objetos">OBJETOS</string>
    <string name="category_colores">COLORES</string>
    <string name="choose_category">Eligí una categoría</string>
    <string name="choose_animal">Elegí un animal para recordar</string>
    <string name="settings_desc">Configuración</string>
    <string name="back_desc">Volver</string>
    <string name="memory_app">Memory App</string>
    <string name="choose_color">Elegí el color:</string>
    <string name="message_correct">¡CORRECTO!</string>
    <string name="message_incorrect">INCORRECTO</string>
    <string name="message_complete">FELICIDADES COMPLETASTE TODOS LOS COLORES</string>
    <string name="animal_perro">Perro</string>
    <string name="animal_gato">Gato</string>
    <string name="animal_conejo">Conejo</string>
    <string name="animal_elefante">Elefante</string>
    <string name="animal_leon">León</string>
    <string name="animal_jirafa">Jirafa</string>

    <string name="guess_word">Adiviná la palabra:</string>
    <string name="observe_images">Observá las imágenes:</string>
    <string name="btn_delete">Borrar</string>
    <string name="btn_check">Comprobar</string>
    <string name="correct_word">¡Correcto! Adivinaste la palabra.</string>
    <string name="incorrect_word">Inténtalo de nuevo.</string>
    <string name="btn_back_desc">Volver</string>
    <string name="object_img_desc">Objeto %1$d</string>
</resources>